--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: sans-serif;
   display: grid;
   height: 100vh;
   place-items: center;
@@ -15,7 +14,7 @@ body {
 }
 
 .container {
-  margin: 15rem auto;
+  margin: 10rem auto;
   width: 50%;
   background-color: #89cff0;
   border-radius: 8px;
@@ -37,7 +36,7 @@ body {
   resize: none;
   outline: none;
   width: 100%;
-  height: 100px;
+  height: 20rem;
   border: none;
   font-size: 2rem;
 }
